[package]
name = "basic-chat-rust-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-rustls = "0.23"
rustls = "0.21"
async-trait = "0.1"