[package]
name = "basic-chat-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.132"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
sled = "0.34"
bcrypt = "0.12"
tokio-rustls = "0.23"
rustls = "0.21"
async-trait = "0.1"